# retlang

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  RESEARCH.md  SECURITY.md  USAGE.md
examples/: basic.py  sample-wordmap.json  wordmap_example.py
src/retlang/: __init__.py  agent.py  alphabets.py  cipher.py  cli.py  entropy.py  header.py  integrity.py  keyderivation.py  phrase.py  qr.py  share.py  ui.py
src/retlang/layers/: __init__.py  alphabet.py  vigenere.py  wordmap.py
src/retlang/static/: app.css  app.js  index.html
tests/: __init__.py  test_agent.py  test_entropy.py  test_layers.py  test_phrase.py  test_qr.py  test_roundtrip.py  test_share.py  test_strength.py  test_tamper.py  test_ui.py  test_wordmap.py
