[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "retlang"
version = "0.1.0"
description = "A two-way, tamper-evident secret-language encryption library using only the Python stdlib."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "retlang contributors" }
]
keywords = ["encryption", "cipher", "vigenere", "hmac", "retlang"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/SanjaySparker27/retlang"
Issues = "https://github.com/SanjaySparker27/retlang/issues"

[project.scripts]
retlang = "retlang.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
