[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "retlang"
version = "0.2.0"
description = "Toy-grade secret-language encryption: 11 alphabets, 4 strength presets, shareable retlang:// URLs, local browser UI. MIT-licensed, Python stdlib-only core."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "SanjaySparker27" }
]
keywords = [
    "encryption",
    "cipher",
    "vigenere",
    "hmac",
    "retlang",
    "stdlib",
    "diceware",
    "qr",
    "shareable",
    "browser-ui",
    "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
]
dependencies = []

[project.optional-dependencies]
qr = ["qrcode[pil]>=7.4"]
dev = ["ruff>=0.4", "mypy>=1.10", "build>=1.2"]
all = ["retlang[qr]"]

[project.urls]
Homepage = "https://github.com/SanjaySparker27/retlang"
Issues = "https://github.com/SanjaySparker27/retlang/issues"
Changelog = "https://github.com/SanjaySparker27/retlang/blob/main/CHANGELOG.md"

[project.scripts]
retlang = "retlang.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
retlang = ["static/*", "static/**/*", "wordlists/*.txt"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.10"
strict_optional = true
ignore_missing_imports = true
